--- a/index.html
+++ b/index.html
@@ -1,375 +1,35 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-  <meta charset="UTF-8" />
-  <title>Smart Planting - لوحة تحكم الري الذكي</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+function togglePump() {
+  const username = localStorage.getItem("loggedInUser");
+  if (!username) return;
 
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      direction: rtl;
-    }
+  const desiredState = pumpOn ? false : true;
 
-    .container {
-      background-color: #1e1e2f;
-      padding: 30px;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 450px;
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
-      position: relative;
-    }
+  fetch("/control", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ username: username, relayState: desiredState }),
+  })
+  .then(res => res.text())
+  .then(data => {
+    console.log(data);
+    pumpOn = desiredState;
+    updatePumpStatus();
+  })
+  .catch(err => console.error(err));
+}
 
-    h2 {
-      text-align: center;
-      margin-bottom: 25px;
-    }
+// تحديث القراءات كل 3 ثواني
+setInterval(() => {
+  const username = localStorage.getItem("loggedInUser");
+  if (!username) return;
 
-    /* اسم المشروع فوق */
-    .project-title {
-      position: absolute;
-      top: 12px;
-      left: 20px;
-      font-weight: 700;
-      font-size: 1.1em;
-      color: #00c6ff;
-      user-select: none;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 5px;
-      margin-top: 15px;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      border-radius: 6px;
-      border: none;
-      outline: none;
-      margin-bottom: 10px;
-      background-color: #2e2e44;
-      color: white;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      background: #00c6ff;
-      background: linear-gradient(to right, #0072ff, #00c6ff);
-      border: none;
-      border-radius: 6px;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 15px;
-      transition: 0.3s ease;
-    }
-
-    button:hover {
-      transform: scale(1.03);
-      box-shadow: 0 0 10px #00c6ff;
-    }
-
-    #dashboard {
-      display: none;
-    }
-
-    .sensor-box,
-    .control-box {
-      background-color: #2e2e44;
-      border-radius: 10px;
-      padding: 15px;
-      margin-top: 20px;
-    }
-
-    .status {
-      font-weight: bold;
-      font-size: 1.2em;
-      color: #00ffae;
-    }
-
-    .logout {
-      background: #ff4e50;
-      background: linear-gradient(to right, #f85032, #e73827);
-    }
-
-    .sensor-label {
-      color: #aaa;
-    }
-
-    /* زر اللغة */
-    .lang-switch {
-      position: absolute;
-      top: 10px;
-      right: 20px;
-      background-color: #005bbb; /* أزرق داكن */
-      color: white;
-      border: none;
-      font-weight: 700;
-      padding: 6px 10px;
-      border-radius: 6px;
-      cursor: pointer;
-      width: 38px;
-      height: 38px;
-      font-size: 1em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: background-color 0.3s ease;
-      box-shadow: 0 0 8px rgba(0, 91, 187, 0.7);
-      user-select: none;
-    }
-
-    .lang-switch:hover {
-      background-color: #0072ff; /* أزرق أفتح */
-      box-shadow: 0 0 12px rgba(0, 114, 255, 0.9);
-    }
-
-    @media screen and (max-width: 500px) {
-      .container {
-        padding: 20px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <div class="project-title" id="projectTitle">Smart Planting</div>
-
-    <button class="lang-switch" id="langSwitch" onclick="toggleLang()">ع</button>
-
-    <!-- تسجيل الدخول -->
-    <div id="login">
-      <h2 id="loginTitle">تسجيل الدخول</h2>
-      <form onsubmit="return login(event)">
-        <label id="labelUsername">اسم المستخدم</label>
-        <input type="text" id="username" required />
-
-        <label id="labelPassword">كلمة المرور</label>
-        <input type="password" id="password" required />
-
-        <button type="submit" id="loginBtn">دخول</button>
-      </form>
-    </div>
-
-    <!-- لوحة التحكم -->
-    <div id="dashboard">
-      <h2 id="dashboardTitle">لوحة تحكم الري الذكي</h2>
-      <p>
-        <span id="welcomeText">مرحبًا،</span>
-        <span id="usernameDisplay"></span>
-      </p>
-
-      <div class="sensor-box">
-        <h3 id="sensorReadingsTitle">قراءات الحساسات</h3>
-        <p>
-          <span class="sensor-label" id="tempLabel">درجة الحرارة:</span>
-          <span id="temp" class="status">--</span> °C
-        </p>
-        <p>
-          <span class="sensor-label" id="humidityLabel">الرطوبة:</span>
-          <span id="humidity" class="status">--</span> %
-        </p>
-      </div>
-
-      <div class="control-box">
-        <h3 id="pumpControlTitle">التحكم في المضخة</h3>
-        <p>
-          <span id="pumpStatusLabel">الحالة الحالية:</span>
-          <span id="pumpStatus" class="status">مطفأة</span>
-        </p>
-        <button onclick="togglePump()" id="togglePumpBtn">تشغيل / إيقاف</button>
-      </div>
-
-      <button class="logout" onclick="logout()" id="logoutBtn">تسجيل الخروج</button>
-    </div>
-  </div>
-
-  <script>
-    const users = {
-      user1: 'pass1',
-      user2: 'pass2',
-      user3: 'pass3',
-      
-
-      
-    };
-
-    let pumpOn = false;
-    let currentLang = 'ar';
-
-    // نصوص بالعربية والإنجليزية
-    const texts = {
-      ar: {
-        projectName: 'Smart Planting',
-        loginTitle: 'تسجيل الدخول',
-        labelUsername: 'اسم المستخدم',
-        labelPassword: 'كلمة المرور',
-        loginBtn: 'دخول',
-        loginError: '❌ اسم المستخدم أو كلمة المرور غير صحيحة',
-        dashboardTitle: 'لوحة تحكم الري الذكي',
-        welcomeText: 'مرحبًا،',
-        sensorReadingsTitle: 'قراءات الحساسات',
-        tempLabel: 'درجة الحرارة:',
-        humidityLabel: 'الرطوبة:',
-        pumpControlTitle: 'التحكم في المضخة',
-        pumpStatusLabel: 'الحالة الحالية:',
-        pumpOn: 'شغالة',
-        pumpOff: 'مطفأة',
-        togglePumpBtn: 'تشغيل / إيقاف',
-        logoutBtn: 'تسجيل الخروج',
-        langButton: 'ع',
-      },
-      en: {
-        projectName: 'Smart Planting',
-        loginTitle: 'Login',
-        labelUsername: 'Username',
-        labelPassword: 'Password',
-        loginBtn: 'Login',
-        loginError: '❌ Incorrect username or password',
-        dashboardTitle: 'Smart Irrigation Dashboard',
-        welcomeText: 'Welcome,',
-        sensorReadingsTitle: 'Sensor Readings',
-        tempLabel: 'Temperature:',
-        humidityLabel: 'Humidity:',
-        pumpControlTitle: 'Pump Control',
-        pumpStatusLabel: 'Current status:',
-        pumpOn: 'On',
-        pumpOff: 'Off',
-        togglePumpBtn: 'Toggle Pump',
-        logoutBtn: 'Logout',
-        langButton: 'EN',
-      },
-    };
-
-    function setLanguage(lang) {
-      currentLang = lang;
-      document.documentElement.lang = lang;
-      document.body.dir = lang === 'ar' ? 'rtl' : 'ltr';
-
-      // تحديث النصوص
-      document.getElementById('projectTitle').innerText = texts[lang].projectName;
-      document.getElementById('loginTitle').innerText = texts[lang].loginTitle;
-      document.getElementById('labelUsername').innerText = texts[lang].labelUsername;
-      document.getElementById('labelPassword').innerText = texts[lang].labelPassword;
-      document.getElementById('loginBtn').innerText = texts[lang].loginBtn;
-      document.getElementById('dashboardTitle').innerText = texts[lang].dashboardTitle;
-      document.getElementById('welcomeText').innerText = texts[lang].welcomeText;
-      document.getElementById('sensorReadingsTitle').innerText = texts[lang].sensorReadingsTitle;
-      document.getElementById('tempLabel').innerText = texts[lang].tempLabel;
-      document.getElementById('humidityLabel').innerText = texts[lang].humidityLabel;
-      document.getElementById('pumpControlTitle').innerText = texts[lang].pumpControlTitle;
-      document.getElementById('pumpStatusLabel').innerText = texts[lang].pumpStatusLabel;
-      document.getElementById('pumpStatus').innerText = pumpOn ? texts[lang].pumpOn : texts[lang].pumpOff;
-      document.getElementById('togglePumpBtn').innerText = texts[lang].togglePumpBtn;
-      document.getElementById('logoutBtn').innerText = texts[lang].logoutBtn;
-      document.getElementById('langSwitch').innerText = texts[lang].langButton;
-    }
-
-    function toggleLang() {
-      if (currentLang === 'ar') {
-        setLanguage('en');
-      } else {
-        setLanguage('ar');
-      }
-    }
-
-    function login(event) {
-      event.preventDefault();
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-
-      if (users[username] === password) {
-        localStorage.setItem('loggedInUser', username);
-        showDashboard();
-      } else {
-        alert(texts[currentLang].loginError);
-      }
-    }
-
-    function showDashboard() {
-      const user = localStorage.getItem('loggedInUser');
-      if (user) {
-        document.getElementById('login').style.display = 'none';
-        document.getElementById('dashboard').style.display = 'block';
-        document.getElementById('usernameDisplay').innerText = user;
-
-        // بيانات مؤقتة للعرض - اربطها بقراءة من ESP32 لاحقًا
-        fetchSensorData(); // ✅ Load real data after login
-        document.getElementById('pumpStatus').innerText = pumpOn ? texts[currentLang].pumpOn : texts[currentLang].pumpOff;
-        document.getElementById('pumpStatus').style.color = pumpOn ? '#00ffae' : '#ff4e50';
-      } else {
-        document.getElementById('login').style.display = 'block';
-        document.getElementById('dashboard').style.display = 'none';
-      }
-    }
-
-    function togglePump() {
-      pumpOn = !pumpOn;
-      document.getElementById('pumpStatus').innerText = pumpOn ? texts[currentLang].pumpOn : texts[currentLang].pumpOff;
-      document.getElementById('pumpStatus').style.color = pumpOn ? '#00ffae' : '#ff4e50';
-
-      // هنا تقدر ترسل أمر للـ ESP32 باستخدام fetch()
-      // fetch(http://esp32.local/pump?status=${pumpOn ? 'on' : 'off'});
-    }
-
-    function logout() {
-      localStorage.removeItem('loggedInUser');
-      // بدل location.reload() نعرض شاشة تسجيل الدخول مباشرة
-      document.getElementById('dashboard').style.display = 'none';
-      document.getElementById('login').style.display = 'block';
-      document.getElementById('username').value = '';
-      document.getElementById('password').value = '';
-    }
-
-    window.onload = function () {
-      setLanguage('ar'); // البداية بالعربية
-      showDashboard();
-    };
-
-    // ✅ Fetch real-time data from Replit backend
-        // ✅ Fetch real-time data from Replit backend for the logged-in user
-        async function fetchSensorData() {
-          try {
-            const user = localStorage.getItem("loggedInUser");
-            if (!user) return;
-
-            const response = await fetch(/data?username=${user});
-            if (!response.ok) throw new Error("Data not found");
-
-            const data = await response.json();
-
-        document.getElementById("temp").innerText = data.temperature.toFixed(1);
-        document.getElementById("humidity").innerText = data.humidity.toFixed(1);
-
-        pumpOn = data.pump === "on";
-        document.getElementById("pumpStatus").innerText = pumpOn ? texts[currentLang].pumpOn : texts[currentLang].pumpOff;
-        document.getElementById("pumpStatus").style.color = pumpOn ? "#00ffae" : "#ff4e50";
-      } catch (error) {
-        console.error("Failed to fetch sensor data:", error);
-      }
-    }
-
-    // ✅ Call this function repeatedly every 5 seconds
-    setInterval(() => {
-      const user = localStorage.getItem("loggedInUser");
-      if (user) fetchSensorData();
-    }, 5000);
-  </script>
-</body>
-</html>
-
+  fetch(`/data?username=${username}`)
+    .then(res => res.json())
+    .then(data => {
+      document.getElementById("temp").innerText = data.temperature.toFixed(2);
+      document.getElementById("humidity").innerText = data.soil;
+      pumpOn = data.relayState;
+      updatePumpStatus();
+    })
+    .catch(err => console.error(err));
+}, 3000);
